[workspace]
members = [
    "tonic",
    "tonic-build",
    "tonic-health",
    "tonic-types",

    # Non-published crates
    "examples",
    "interop",

    # Tests
    "tests/included_service",
    "tests/same_name",
    "tests/wellknown",
    "tests/extern_path/uuid",
    "tests/ambiguous_methods",
    "tests/extern_path/my_application",
    "tests/integration_tests"
]

[patch.crates-io]
tracing = { git = "https://github.com/NathanHowell/tracing.git", rev = "084dae8247f1e9a751298163fb43d189d07867e2" }
tracing-attributes = { git = "https://github.com/NathanHowell/tracing.git", rev = "084dae8247f1e9a751298163fb43d189d07867e2" }
tracing-futures = { git = "https://github.com/NathanHowell/tracing.git", rev = "084dae8247f1e9a751298163fb43d189d07867e2" }
tracing-log = { git = "https://github.com/NathanHowell/tracing.git", rev = "084dae8247f1e9a751298163fb43d189d07867e2" }
tracing-subscriber = { git = "https://github.com/NathanHowell/tracing.git", rev = "084dae8247f1e9a751298163fb43d189d07867e2" }
